# codereview-bot

./: .env.example  Dockerfile  README.md  bot.py  chat.py  prompt.j2  prompts.json  prompts.yaml  pyproject.toml  utils.py
tests/: test_bot.py  test_chat.py  test_utils.py
