[project]
name = "python-codereview-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=1.76.2",
    "python-gitlab>=5.6.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
